# ROS_2_Perceptron

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/perceptron_robot_bringup/share/perceptron_robot_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/perceptron_robot_bringup/share/perceptron_robot_bringup/launch/: gazebo_control2.launch.py  rviz_control.launch.py
install/perceptron_robot_control/share/perceptron_robot_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/perceptron_robot_control/share/perceptron_robot_control/config/: controllers.yaml  controllersRviz.yaml
install/perceptron_robot_description/share/perceptron_robot_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/perceptron_robot_description/share/perceptron_robot_description/launch/: display.launch.py
install/perceptron_robot_description/share/perceptron_robot_description/meshes/: Component4_1.stl  Component5_1.stl  Plastic Rim.stl  Tyre.stl  Wheel_1.stl  base_link.stl  left_2.stl  rim_1.stl  (+13 more)
install/perceptron_robot_gazebo/share/perceptron_robot_gazebo/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/perceptron_robot_hardware/share/perceptron_robot_hardware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/perceptron_robot_bringup/: package.xml  setup.cfg  setup.py
src/perceptron_robot_bringup/launch/: gazebo_control2.launch.py
src/perceptron_robot_control/: setup.cfg  setup.py
src/perceptron_robot_control/config/: controllers.yaml
src/perceptron_robot_description/: setup.cfg  setup.py
src/perceptron_robot_description/meshes/: Component4_1.stl  Component5_1.stl  IMU_1.stl  Plastic Rim.stl  Tyre.stl  Wheel_1.stl  base_link.stl  camera_1.stl  left_2.stl  rim_1.stl  rim_2.stl  rim_3.stl  rim_4.stl  tyre_1.stl  tyre_2.stl  tyre_3.stl  tyre_4.stl  tyre_5.stl
src/perceptron_robot_description/urdf/: materials.xacro  perceptron_robot.gazebo  perceptron_robot.trans  perceptron_robot.xacro  simple.xacro  simple_stl_working.xacro
src/perceptron_robot_gazebo/: setup.cfg  setup.py
src/perceptron_robot_hardware/: CMakeLists.txt
(+13 files in other folders)
